frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend-deployment
  template:
    metadata:
      labels:
        name: frontend-deployment
    spec:
      containers:
        - image: sayfelanjos/shell-mf:v1.0.0
          name: shell-mf
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
