frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shell-mf-service
  labels:
    app: shell-mf-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: frontend-del-mf-service
      port: 3000
      targetPort: 3000
  selector:
    name: shell-mf-deployment
